[project]
name = "cyberbriefs-automation"
version = "0.1.0"
description = "Serverless Instagram cybersecurity infographic automation with Telegram approval."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "Pillow>=10.0.0",   # composite image provider (text overlay)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
